--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++14 -o3")
 
 FIND_PACKAGE(Boost 1.40 COMPONENTS program_options REQUIRED)
 
-include_directories(src src/Constructives src/LocalSearches src/Metaheuristics)
+include_directories(includes includes/Constructives includes/LocalSearches includes/Metaheuristics)
 
 file(GLOB_RECURSE SRC src/*.cpp)
 
-ADD_EXECUTABLE(app ${SRC} src/Constructives/MOD.cpp src/Constructives/MOD.hpp)
+ADD_EXECUTABLE(app ${SRC})
 
 TARGET_LINK_LIBRARIES(app LINK_PUBLIC ${Boost_LIBRARIES})
 
