topological sort e bellman ford separados

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,14 @@ SET(CMAKE_CXX_FLAGS "-g -Wall -std=c++14 -o3")
 
 FIND_PACKAGE(Boost 1.40 COMPONENTS program_options REQUIRED)
 
-include_directories(includes includes/Constructives includes/LocalSearches includes/Metaheuristics)
+include_directories(includes includes/Constructives
+        includes/LocalSearches
+        includes/Metaheuristics
+        includes/GraphUtils)
 
 file(GLOB_RECURSE SRC src/*.cpp)
 
-ADD_EXECUTABLE(app ${SRC} includes/GraphUtils/CriticalPath.hpp src/GraphUtils/BellmanFord.cpp includes/GraphUtils/BellmanFord.hpp)
+ADD_EXECUTABLE(app ${SRC})
 
 TARGET_LINK_LIBRARIES(app LINK_PUBLIC ${Boost_LIBRARIES})
 
